# wxl-core

./: .gitignore  CMakeLists.txt  README.md  build.ps1
Host/: README.md
Patcher/: Patcher.cpp
docs/: WarcraftXL.cfg.example
docs/extensions-example/: hello.lua
scripts/: .gitignore
scripts/wxl-modern-anim/: README.md
src/: Wraith.cpp  config.hpp
src/Features/M2/: Modern.cpp
src/common/: Config.cpp  Config.hpp  Log.cpp  Log.hpp  Mem.hpp
src/core/: Hook.cpp  Hook.hpp  Logger.cpp  Logger.hpp  Main.cpp  Mem.cpp  Mem.hpp
src/engine/assets/common/: BoneBudget.cpp  BoneBudget.hpp
src/engine/assets/db2/: Db2.cpp  Db2.hpp  ItemDisplayIndex.cpp  ItemDisplayIndex.hpp  Wdc5.cpp  Wdc5.hpp
src/engine/assets/m2/: M2Format.hpp
src/engine/assets/models/m2/: ModernM2.cpp  ModernM2.hpp  Skin.cpp  Skin.hpp
src/engine/assets/models/m3/: ParticleProbe.cpp
src/engine/assets/models/wmo/: WmoRuntime.cpp
src/engine/assets/textures/blp/: TextureScratch.cpp
src/engine/db2/: Db2Table.hpp  Wdc1.cpp  Wdc1.hpp
src/engine/db2/schema/: ModelFilePath.hpp  TextureFilePath.hpp
src/engine/events/: Event.cpp  Event.hpp  EventScript.hpp
src/engine/gpu/: Proxy.cpp
src/engine/hook/: Hook.cpp  Hook.hpp  Registry.cpp  Registry.hpp
src/engine/lua/: DevReload.cpp  DevReload.hpp  Loader.cpp  Loader.hpp  LuaEngine.cpp  LuaEngine.hpp  LuaJit.hpp  Marshal.hpp  ObjectProxy.cpp  ObjectProxy.hpp
src/engine/lua/events/: AssetEvents.hpp  EventBridge.cpp  EventBridge.hpp  FrameEvents.hpp  GameEvents.hpp  GrassEvents.hpp  InputEvents.hpp  M2Events.hpp  RenderEvents.hpp  UiEvents.hpp  UnitEvents.hpp
src/engine/lua/ffi/: CdefGen.cpp  CdefGen.hpp  FfiBootstrap.cpp  FfiBootstrap.hpp
src/engine/lua/methods/: AdtMethods.hpp  CameraMethods.hpp  CharModelMethods.hpp  CoreMethods.hpp  DiagMethods.hpp  DoodadMethods.hpp  M2Methods.hpp  PointerArg.hpp  SoundMethods.hpp  TextureMethods.hpp  UiMethods.hpp  UnitMethods.hpp  WindMethods.hpp  WmoMethods.hpp  WorldMethods.hpp  WorldPickMethods.hpp
src/engine/lua/methods/ui/: Combo.hpp  Common.hpp  Constants.hpp  Drags.hpp  DrawList.hpp  Input.hpp  Layout.hpp  Popups.hpp  Query.hpp  Style.hpp  Tables.hpp  TabsMenus.hpp  Text.hpp  Trees.hpp  Widgets.hpp  Windows.hpp
src/engine/lua/ui/: BlpDecode.cpp  BlpDecode.hpp  ImGuiHost.cpp  ImGuiHost.hpp  Texture.cpp  Texture.hpp
src/engine/security/: Crypto.cpp  Crypto.hpp  Manifest.cpp  Manifest.hpp  PublicKey.hpp
src/engine/storage/: ShmClient.cpp  ShmClient.hpp  StorageHook.cpp  StorageHook.hpp
src/events/: Event.cpp  Event.hpp  EventScript.hpp
src/features/adtsplit/: AdtSplit.cpp  AdtSplit.hpp  HeightBlend.cpp  HeightBlend.hpp
src/features/charmodel/: CharModel.cpp
src/features/diag/: AssetProfile.cpp  AssetProfile.hpp  DrawStats.cpp  DrawStats.hpp
src/features/fdid/: Fdid.cpp  Fdid.hpp
src/features/grasswind/: GrassWind.cpp  GrassWind.hpp
src/features/input/: Input.cpp
src/features/luabindings/: LuaBindings.cpp  LuaBindings.hpp
src/features/m2compat/: Batches.cpp  Bones.cpp  Loader.cpp  ShadowSpace.cpp  ShadowSpace.hpp
src/features/m2memory/: M2Memory.cpp
src/features/m2native/: M2Native.cpp  M2Native.hpp  ParticleStride.cpp  ParticleStride.hpp
src/features/overlay/: Panels.cpp
src/features/phasing/: Phasing.cpp
src/features/render/: M2Draw.cpp  Render.cpp  Render.hpp
src/features/sound/: Sound.cpp
src/features/spawn/: Spawn.cpp
src/features/streaming/: Streaming.cpp
src/features/textures/: Textures.cpp
src/features/unit/: Unit.cpp
src/features/wmonative/: CompositeShader.cpp  CompositeShader.hpp  OutdoorGate.cpp  OutdoorGate.hpp  WmoNative.cpp  WmoNative.hpp
src/features/world/: World.cpp
src/game/: Binding.cpp  Binding.hpp  Catalog.cpp  Catalog.hpp
src/game/adt/: Adt.hpp
src/game/camera/: Camera.hpp
src/game/doodad/: Doodad.hpp
src/game/gx/: Gx.cpp  Gx.hpp
src/game/io/: Io.hpp
src/game/m2/: M2.hpp
src/game/mem/: Mem.hpp
src/game/ui/: Ui.hpp
src/game/unit/: Unit.hpp
src/game/wmo/: Wmo.hpp
src/game/world/: Loading.hpp  Pick.hpp  World.hpp
src/gpu/: Capture.cpp  Capture.hpp  Device.cpp  Device.hpp  Present.cpp  Present.hpp  Proxy.cpp  Proxy.def  Proxy.hpp
src/host/: Aliases.cpp  Aliases.hpp  Blobs.cpp  Blobs.hpp  Console.cpp  Console.hpp  Host.cpp  Host.hpp  HostHooks.hpp  HostSafeCall.cpp  HostState.cpp  Produce.cpp  Produce.hpp  Profile.cpp  Profile.hpp  Serve.cpp  Serve.hpp  Warm.cpp  Warm.hpp  main.cpp
src/host/assets/models/m2/: AnimHost.cpp  EquipmentFixes.cpp  Register.cpp
src/host/assets/models/m3/: M3Host.cpp
src/host/assets/models/wmo/: WmoHost.cpp
src/host/assets/textures/blp/: BlpHost.cpp
src/host/ipc/: Protocol.hpp  ShmServer.cpp  ShmServer.hpp
src/host/mpq/: MpqMount.cpp  MpqPath.hpp  MpqStore.cpp  MpqStore.hpp
src/host/resolver/: Db2Resolver.cpp
src/host/resolver/db2/: DB2.cpp  DB2File.cpp  Db2Store.cpp
src/offsets/engine/: Gx.hpp  Lua.hpp  Shader.hpp
src/offsets/game/: ADT.hpp  DB2.hpp  GroundEffect.hpp  M2.hpp  Texture.hpp  Unit.hpp  WMO.hpp  World.hpp  WorldScene.hpp
src/overlay/: Panels.hpp
src/patcher/: GlueUnlock.cpp  Main.cpp  PatchScript.cpp  PatchScript.hpp  PeImage.cpp  PeImage.hpp
src/runtime/: AssetProfile.cpp  GameHooks.cpp  GameHooks.hpp  InputHooks.cpp  InputHooks.hpp  LuaBindings.cpp  LuaBindings.hpp  Main.cpp  ModuleInstall.cpp  ModuleInstall.hpp  PhasingHooks.cpp  PhasingHooks.hpp  RenderHooks.cpp  RenderHooks.hpp
src/runtime/adt/: Adt.cpp  Adt.hpp
src/runtime/m2/: Loader.cpp
src/runtime/multipass/: MultiPass.cpp  MultiPass.hpp
src/runtime/storage/: ShmClient.cpp  ShmClient.hpp  StorageHook.cpp  StorageHook.hpp
src/runtime/wmo/: WmoGuards.cpp  WmoMultiPass.cpp  WmoMultiPass.hpp
src/scripting/: .gitkeep
src/sign/: main.cpp
src/structure/: ChunkIO.hpp  StructureDispatcher.cpp
src/structure/ADT/: AdtMerge.cpp  AdtMerge.hpp  AdtTexScale.hpp
src/structure/M2/: Client.hpp  M2Translate.cpp  M2Translate.hpp
src/structure/WDT/: WdtFixup.cpp
src/structure/WMO/: Client.hpp  Source.hpp  WmoChunks.hpp  WmoPassPlan.hpp  WmoTranslate.cpp
src/structure/m2/: M2Format.hpp
(+10 files in other folders)
